--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: post-index
 title: "Welcome to School Diary Blog"
-description: "A tale of School Diary, powered by Zoment's journey."
+description: "A tale of School Diary"
 tags: [school, diary, school diary, responsive, blog, modern]
 comments: false
 ---
